@@ -45,28 +45,23 @@ function user.main():void;
     io.print(As);
     io.print(Asr);
     io.print("ifthen group");
-    xif0 := batcalc.ifthen(x,Ai);
-    io.print(x,xif0);
-    xif0 := batcalc.ifthen(x,888);
-    io.print(x,xif0);
+#	xif0:= batcalc.ifthen(x,Ai);io.print(x,xif0); 
+#	xif0:= batcalc.ifthen(x,888);io.print(x,xif0); 
     xif2 := batcalc.ifthenelse(x,Ai,Air);
     io.print(x,xif2);
     xif2 := batcalc.ifthenelse(x,Ai,-999);
     io.print(x,xif2);
     xif2 := batcalc.ifthenelse(x,999,Air);
     io.print(x,xif2);
-    sif0 := batcalc.ifthen(x,As);
-    io.print(x,sif0);
-    sif0 := batcalc.ifthen(x,"moon");
-    io.print(x,sif0);
+#	sif0:= batcalc.ifthen(x,As);io.print(x,sif0); 
+#	sif0:= batcalc.ifthen(x,"moon");io.print(x,sif0); 
     sif2 := batcalc.ifthenelse(x,As,Asr);
     io.print(x,sif2);
     sif2 := batcalc.ifthenelse(x,As,"unknown");
     io.print(x,sif2);
     sif2 := batcalc.ifthenelse(x,"unknown",Asr);
     io.print(x,sif2);
-    xif1 := batcalc.ifthen(x,false);
-    io.print(x,xif1);
+#	xif1:= batcalc.ifthen(x,false);io.print(x,xif1); 
     xif3 := batcalc.ifthenelse(x,x,true);
     io.print(x,x,xif3);
     xif4 := batcalc.ifthenelse(x,1,2);
@@ -111,19 +106,7 @@ end main;
 #-------------------------#
 # h	t	t	  # name
 # void	bit	int	  # type
-#-------------------------#
-[ 0@0,	  true,	  1	  ]
-[ 2@0,	  nil,	  nil	  ]
-#-------------------------#
-# h	t	t	  # name
-# void	bit	int	  # type
-#-------------------------#
-[ 0@0,	  true,	  888	  ]
-[ 2@0,	  nil,	  nil	  ]
-#-------------------------#
-# h	t	t	  # name
-# void	bit	int	  # type
-#-------------------------#
+#--------------------------#
 [ 0@0,	  true,	  1	  ]
 [ 1@0,	  false,  -2	  ]
 [ 2@0,	  nil,	  nil	  ]
@@ -141,19 +124,7 @@ end main;
 [ 0@0,	  true,	  999	  ]
 [ 1@0,	  false,  -2	  ]
 [ 2@0,	  nil,	  nil	  ]
-#---------------------------------#
-# h	t	t		  # name
-# void	bit	str		  # type
-#---------------------------------#
-[ 0@0,	  true,	  "hello"	  ]
-[ 2@0,	  nil,	  nil	  ]
-#---------------------------------#
-# h	t	t	  # name
-# void	bit	str	  # type
-#---------------------------------#
-[ 0@0,	  true,	  "moon"	  ]
-[ 2@0,	  nil,	  nil	  ]
-#---------------------------------#
+#--------------------------#
 # h	t	t		  # name
 # void	bit	str		  # type
 #---------------------------------#
@@ -174,13 +145,7 @@ end main;
 [ 0@0,	  true,	  "unknown"	  ]
 [ 1@0,	  false,  "NEW"		  ]
 [ 2@0,	  nil,	  nil		  ]
-#-------------------------#
-# h	t	t	  # name
-# void	bit	bit	  # type
-#-------------------------#
-[ 0@0,	  true,	  false	  ]
-[ 2@0,	  nil,	  nil	  ]
-#---------------------------------#
+#--------------------------#
 # h	t	t	t	  # name
 # void	bit	bit	bit	  # type
 #---------------------------------#
