@@ -21243,10 +21243,6 @@ pattern str_noerror(b:bat[:oid,:str],s:bat[:oid,:oid]) :bat[:oid,:str]
 address CMDconvert_str
 comment "cast from str to str with candidates list";
 
-pattern ifthen(b:bat[:oid,:bit], v1:any_1) :bat[:oid,:any_1]
-address CMDifthen
-comment "If-then operation to assemble a conditional result";
-
 pattern ifthenelse(b:bat[:oid,:bit], v1:any_1, v2:any_1) :bat[:oid,:any_1]
 address CMDifthen
 comment "If-then-else operation to assemble a conditional result";
@@ -21258,10 +21254,6 @@ comment "If-then-else operation to assemble a conditional result";
 pattern ifthenelse(b:bat[:oid,:bit], v1:any_1, b2:bat[:oid,:any_1]) :bat[:oid,:any_1]
 address CMDifthen
 comment "If-then-else operation to assemble a conditional result";
-
-pattern ifthen(b:bat[:oid,:bit], b1:bat[:oid,:any_1]) :bat[:oid,:any_1]
-address CMDifthen
-comment "If-then operation to assemble a conditional result";
 
 pattern ifthenelse(b:bat[:oid,:bit], b1:bat[:oid,:any_1], b2:bat[:oid,:any_1]) :bat[:oid,:any_1]
 address CMDifthen
