@@ -24725,10 +24725,6 @@ pattern batcalc.ifthenelse(b:bat[:oid,:bit],b1:bat[:oid,:any_1],b2:bat[:oid,:any
 address CMDifthen;
 comment If-then-else operation to assemble a conditional result
 
-pattern batcalc.ifthen(b:bat[:oid,:bit],b1:bat[:oid,:any_1]):bat[:oid,:any_1] 
-address CMDifthen;
-comment If-then operation to assemble a conditional result
-
 pattern batcalc.ifthenelse(b:bat[:oid,:bit],v1:any_1,b2:bat[:oid,:any_1]):bat[:oid,:any_1] 
 address CMDifthen;
 comment If-then-else operation to assemble a conditional result
@@ -24740,10 +24736,6 @@ comment If-then-else operation to assemble a conditional result
 pattern batcalc.ifthenelse(b:bat[:oid,:bit],v1:any_1,v2:any_1):bat[:oid,:any_1] 
 address CMDifthen;
 comment If-then-else operation to assemble a conditional result
-
-pattern batcalc.ifthen(b:bat[:oid,:bit],v1:any_1):bat[:oid,:any_1] 
-address CMDifthen;
-comment If-then operation to assemble a conditional result
 
 pattern batcalc.int_noerror(b:bat[:oid,:str],s:bat[:oid,:oid]):bat[:oid,:int] 
 address CMDconvert_int;
